updated dependencies and added submitted notes logic
